# TextConverter

./: .gitignore  CMakeLists.txt  License.txt  README.md
Resources/: utf-8.txt
Resources/QTUI/: TextConverter.ui
TextConverterCommandLineTool/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  TextConverterCommandLineTool.vcxproj  TextConverterCommandLineTool.vcxproj.filters  main.cpp
TextConverterGUI/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  License.txt  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  TextConverterForm.cpp  TextConverterForm.h  TextConverterForm.ui  TextConverterGUI.vcxproj  TextConverterGUI.vcxproj.filters  main.cpp
TextConverterGUI/TextConverterGUI_autogen/: mocs_compilation_Debug.cpp
TextConverterGUI/TextConverterGUI_autogen/include_Debug/EWIEGA46WW/: moc_rasterwindow.cpp
TextConverterLib/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  TextConverter.cpp  TextConverter.h  TextConverterLib.vcxproj  TextConverterLib.vcxproj.filters
UnitTests/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  UnitTests.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  UnitTestsRun.vcxproj  UnitTestsRun.vcxproj.filters
UnitTests/Resources/in/: code page 437.txt
